Pubsub and the notify command are workinggit status
